--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hw-02</title>
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
   </head>
   <body>
-    <header>
+    <header class="head">
+      <div class="head-box container">
         <!-- nav -->
         <nav class="navigation">
           <!-- logo -->
           <a class="logo link" href="./index.html">Web<span class="colored-studio">Studio</span></a>
           <!-- navigation -->
-          <ul class="list">
+          <ul class="list nav-list">
             <li><a class="pages link" href="./index.html">Studio</a></li>
             <li><a class="pages link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="pages link" href="">Contacts</a></li>
@@ -25,11 +28,13 @@
         </nav>
         <!-- contact -->
         <address class="contact">
-          <ul class="list">
+          <ul class="list contact-ul">
             <li><a class="contact-list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="contact-list link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
           </ul>
         </address>
+      </div>
+       
       </header>
       <!-- main information -->
     <main>
