--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hw-02</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,31 +40,36 @@
     <main>
       <!-- section 1 -->
       <section class="section-one">
-        <h1 class="heading">Effective Solutions for Your Business</h1>
-        <button class="button-one" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="heading">Effective Solutions for Your Business</h1>
+          <button class="button-one" type="button">Order Service</button>
+        </div>
+
       </section>
       <!-- section 2 -->
-      <section>
-        <h2 class="hidden">Section 2</h2>
-        <ul class="list">
-          <li class="lists">
-            <h3 class="title-list">Strategy</h3>
-            <p class="text-sections">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-          </li>
-          <li>
-            <h3 class="title-list">Punctuality</h3>
-            <p class="text-sections">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-          </li>
-          <li>
-            <h3 class="title-list">Diligence</h3>
-         
-            <p class="text-sections">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li>
-            <h3 class="title-list">Technologies</h3>
-            <p class="text-sections">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-        </ul>
+      <section class="section-two">
+        <div class="container">
+          <h2 class="hidden">Section 2</h2>
+          <ul class="list sc-two-ul">
+            <li class="sc-two-lists">
+              <h3 class="title-list sc-two-title">Strategy</h3>
+              <p class="text-sections">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li class="sc-two-lists">
+              <h3 class="title-list sc-two-title">Punctuality</h3>
+              <p class="text-sections">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li class="sc-two-lists">
+              <h3 class="title-list sc-two-title">Diligence</h3>
+           
+              <p class="text-sections">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li class="sc-two-lists">
+              <h3 class="title-list sc-two-title">Technologies</h3>
+              <p class="text-sections">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section3 -->
       <section>
