--- a/portfolio.html
+++ b/portfolio.html
@@ -13,26 +13,29 @@
     
 </head>
 <body>
-    <header>
-        <!-- nav -->
-        <nav class="navigation">
-          <!-- logo -->
-          <a class="logo link" href="./index.html">Web<span class="colored-studio">Studio</span></a>
-          <!-- navigation -->
-          <ul class="list">
-            <li><a class="pages link" href="./index.html">Studio</a></li>
-            <li><a class="pages link" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="pages link" href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <!-- contact -->
-        <address class="contact">
-          <ul class="list">
-            <li><a class="contact-list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="contact-list link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
-      </header>
+    <header class="head">
+        <div class="head-box container">
+          <!-- nav -->
+          <nav class="navigation">
+            <!-- logo -->
+            <a class="logo link" href="./index.html">Web<span class="colored-studio">Studio</span></a>
+            <!-- navigation -->
+            <ul class="list nav-list">
+              <li><a class="pages link" href="./index.html">Studio</a></li>
+              <li><a class="pages link" href="./portfolio.html">Portfolio</a></li>
+              <li><a class="pages link" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <!-- contact -->
+          <address class="contact">
+            <ul class="list contact-ul">
+              <li><a class="contact-list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a class="contact-list link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+          </address>
+        </div>
+         
+        </header>
       <!-- main information -->
       <main>
         <section>
