--- a/index.html
+++ b/index.html
@@ -72,51 +72,67 @@
         </div>
       </section>
       <!-- section3 -->
-      <section>
-        <h2 class="title-sections">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/rectangle-1.jpg" alt="Image not found" width="360" height="300"/>
-          </li>
-          <li>
-            <img src="./images/rectangle-2.jpg" alt="Image not found" width="360" height="300"/>
-          </li>
-          <li>
-            <img  src="./images/rectangle-3.jpg" alt="Image not found" width="360" height="300"/>
-          </li>
-        </ul>
+      <section class="section-three">
+        
+        <div class="container">
+          <h2 class="title-sections sc-three-title">What are we doing</h2>
+          <ul class="list sc-three-ul">
+            <li class="sc-three-list">
+              <img src="./images/rectangle-1.jpg" alt="Image not found" width="360" height="300"/>
+            </li>
+            <li class="sc-three-list">
+              <img src="./images/rectangle-2.jpg" alt="Image not found" width="360" height="300"/>
+            </li>
+            <li class="sc-three-list">
+              <img  src="./images/rectangle-3.jpg" alt="Image not found" width="360" height="300"/>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- section 4 -->
       <section class="section-four">
-        <h2 class="title-sections">Our Team</h2>
-        <ul class="list">
+        <div class="container">
+          <h2 class="title-sections sc-four-title">Our Team</h2>
+        <ul class="list sc-four-ul">
           <li class="list-four">
-            <img src="./images/img-1.jpg" alt="Image not found" width="264" height="260"/>
-            <h3 class="title-list">Mark Guerrero</h3>
-            <p class="text-sections">Product Designer</p>
+            <div class="sc-four-box">
+              <img src="./images/img-1.jpg" alt="Image not found" width="264" height="260"/>
+              <h3 class="title-list sc-four-name">Mark Guerrero</h3>
+              <p class="text-sections sc-four-text">Product Designer</p>
+            </div>
+            
           </li>
           <li class="list-four">
+            <div class="sc-four-box">
             <img src="./images/img-2.jpg" alt="Image not found" width="264" height="260"/>
-            <h3 class="title-list">Tom Ford</h3>
-            <p class="text-sections">Frontend Developer</p>
+            <h3 class="title-list sc-four-name">Tom Ford</h3>
+            <p class="text-sections sc-four-text">Frontend Developer</p>
+          </div>
           </li>
           <li class="list-four">
+            <div class="sc-four-box">
             <img src="./images/img-3.jpg" alt="Image not found" width="264" height="260"/>
-            <h3 class="title-list">Camila Garcia</h3>
-            <p class="text-sections">Marketing</p>
+            <h3 class="title-list sc-four-name">Camila Garcia</h3>
+            <p class="text-sections sc-four-text">Marketing</p>
+          </div>
           </li>
           <li class="list-four">
+            <div class="sc-four-box">
             <img src="./images/img-4.jpg" alt="Image not found" width="264" height="260"/>
-            <h3 class="title-list">Daniel Wilson</h3>
-            <p class="text-sections">UI Designer</p>
+            <h3 class="title-list sc-four-name">Daniel Wilson</h3>
+            <p class="text-sections sc-four-text">UI Designer</p>
+          </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <!-- footer -->
     <footer class="foot">
-      <a class="logo link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
-      <p class="footer-studio">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <div class="container">
+        <a class="logo link foot-link" href="./index.html">Web<span class="footer-studio">Studio</span></a>
+      <p class="footer-studio foot-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
   </body>
 </html>
