--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
                     <li><button class="btn" type="button">Design</button></li>
                     <li><button class="btn" type="button">Marketing</button></li>
                 </ul>
-                <ul class="list">
-                    <li>
+                <ul class="list catalog-ul">
+                    <li class="catalog-list">
                         <a class="link" href="">
                             <img src="./images/img-portfolio-8.jpg" alt="Image not found"/>
                             <h2 class="title-list">Banking App Interface Concept</h2>
@@ -57,56 +57,56 @@
                         </a>
                         
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-7.jpg" alt="Image not found"/>
                              <h2 class="title-list">Cashless Payment</h2> 
                             <p class="color-list text-sections">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-6.jpg" alt="Image not found"/>
                              <h2 class="title-list">Meditation App</h2> 
                             <p class="color-list text-sections">App</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-5.jpg" alt="Image not found"/>
                              <h2 class="title-list">Taxi Service</h2> 
                             <p class="color-list text-sections">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-4.jpg" alt="Image not found"/>
                              <h2 class="title-list">Screen Illustrations</h2> 
                             <p class="color-list text-sections">Design</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-3.jpg" alt="Image not found"/>
                              <h2 class="title-list">Online Courses</h2> 
                             <p class="color-list text-sections">Marketing</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-2.jpg" alt="Image not found"/>
                              <h2 class="title-list">Instagram Stories Concept</h2> 
                             <p class="color-list text-sections">Design</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-1.jpg" alt="Image not found"/>
                              <h2 class="title-list">Organic Food</h2> 
                             <p class="color-list text-sections">Web Site</p>
                         </a>
                     </li>
-                    <li>
+                    <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio.jpg" alt="Image not found"/>
                              <h2 class="title-list">Fresh Coffee</h2> 
