--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hw-02</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +53,7 @@
                         <a class="link" href="">
                             <img src="./images/img-portfolio-8.jpg" alt="Image not found"/>
                             <div class="catalog-item">
-                                <h2 class="title-list">Banking App Interface Concept</h2>
+                                <h2 class="title-list catalog-title">Banking App Interface Concept</h2>
                                 <p class="color-list text-sections">App</p>
                             </div>
                         </a>
@@ -63,7 +63,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-7.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Cashless Payment</h2> 
+                             <h2 class="title-list catalog-title">Cashless Payment</h2> 
                             <p class="color-list text-sections">Marketing</p>
                         </div>
                         </a>
@@ -73,7 +73,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-6.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Meditation App</h2> 
+                             <h2 class="title-list catalog-title">Meditation App</h2> 
                             <p class="color-list text-sections">App</p>
                             </div>
                         </a>
@@ -82,7 +82,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-5.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Taxi Service</h2> 
+                             <h2 class="title-list catalog-title">Taxi Service</h2> 
                             <p class="color-list text-sections">Marketing</p>
                             </div>
                         </a>
@@ -91,7 +91,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-4.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Screen Illustrations</h2> 
+                             <h2 class="title-list catalog-title">Screen Illustrations</h2> 
                             <p class="color-list text-sections">Design</p>
                             </div>
                         </a>
@@ -100,7 +100,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-3.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Online Courses</h2> 
+                             <h2 class="title-list catalog-title">Online Courses</h2> 
                             <p class="color-list text-sections">Marketing</p>
                             </div>
                         </a>
@@ -109,7 +109,7 @@
                         <a class="link" href="">
                         <img src="./images/img-portfolio-2.jpg" alt="Image not found"/>
                         <div class="catalog-item">
-                             <h2 class="title-list">Instagram Stories Concept</h2> 
+                             <h2 class="title-list catalog-title">Instagram Stories Concept</h2> 
                             <p class="color-list text-sections">Design</p>
                             </div>
                         </a>
@@ -117,8 +117,8 @@
                     <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio-1.jpg" alt="Image not found"/>
-                        <div class="catalog-item"></div>
-                             <h2 class="title-list">Organic Food</h2> 
+                        <div class="catalog-item">
+                             <h2 class="title-list catalog-title">Organic Food</h2> 
                             <p class="color-list text-sections">Web Site</p>
                             </div>
                         </a>
@@ -126,8 +126,8 @@
                     <li class="catalog-list">
                         <a class="link" href="">
                         <img src="./images/img-portfolio.jpg" alt="Image not found"/>
-                        <div class="catalog-item"></div>
-                             <h2 class="title-list">Fresh Coffee</h2> 
+                        <div class="catalog-item">
+                             <h2 class="title-list catalog-title">Fresh Coffee</h2> 
                             <p class="color-list text-sections">Web Site</p>
                             </div>
                         </a>
